
	- Added SQLSTATE macro closing bug #3961.
	- EXECUTE can return NOT FOUND so it should be checked here too.
	- Changed regression test accordingly.

Fri, 15 Feb 2008 12:01:13 +0100

	- Changed the way symbols are defined in C in INFORMIX mode.

Sun, 17 Feb 2008 18:45:39 +0100

	- Removed duplicate include of ecpgtype.h.
	- Changed INFORMIX mode symbol definition yet again because the old
	  way didn't work on NetBSD.

Sun, 02 Mar 2008 11:50:48 +0100

	- Fixed bug that caused arrays of varchar to be output with incomplete
	  name.

Thu, 20 Mar 2008 16:54:27 +0100

	- Changed statement escaping to not escape continuation line markers.
	- Added ECPGget_PGconn() function to ecpglib, courtesy of Mike Aubury.

Tue, 25 Mar 2008 13:42:26 +0100

	- Should list ECPGget_PGconn in exports.txt.

Wed, 26 Mar 2008 17:02:08 +0100

	- Moved from PQsetdbLogin to PQconnectDB.
	- Correctly parse connect options.

Thu, 10 Apr 2008 12:42:25 +0200

	- Fixed bug in PGTYPEStimestamp_sub that used pointers instead of the
	  values to substract.

Mon, 12 May 2008 18:19:08 +0200

	- Check for non-existant connection in prepare statement handling.
	- Do not close files that weren't opened.

Tue, 20 May 2008 17:31:01 +0200

	- Synced parser.
	- Made ecpg parser use backend provided keyword list. One less file to
	  sync manually.
	- Changed whenever test so exit value is 0.

Wed, 04 Jun 2008 14:22:30 +0200

	- Added lost symbol SQL to list of allowed variable names.

Tue, 24 Jun 2008 13:30:51 +0200

	- Synced parser.

Tue, 19 Aug 2008 12:32:24 +0200

	- Fixed incorrect argument handling in SET command if argument is a variable.

Wed, 20 Aug 2008 15:49:23 +0200

	- Synced parser.

Tue, 07 Oct 2008 14:35:26 +0200

	- Synced parser.

Fri, 10 Oct 2008 14:03:05 +0200

	- Fixed "create role" parsing to accept optional "with" argument.
	- Set pgtypes library version to 3.1.
	- Set compat library version to 3.1.
	- Set ecpg library version to 6.2.
	- Set ecpg version to 4.5.
